--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,13 @@
   font-size: 1.5rem;
   cursor: pointer;
 }
+
+.movie-item{
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+}
+
+.movie-item svg{
+  font-size: 1.2 rem;
+  margin: 16px 5px;
+}
