--- a/src/App.css
+++ b/src/App.css
@@ -18,16 +18,45 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
-.orange{
+.orange {
   color: orange;
 }
 
-.rate-container{
+.rate-container {
   margin-top: 20px;
   border-top: 2px solid purple;
 }
 
-.purple{
+.login-container {
+  width: 50%;
+  margin: 0 25%;
+}
+
+input,
+textarea {
+  width: 60%;
+  padding: 10px;
+  margin: 8px 2px;
+  font-size: 0.8rem;
+}
+
+button {
+  color: #444;
+  background-color: #f3f3f3;
+  padding: 5px 10px;
+  border-radius: 2px;
+  font-weight: bold;
+  font-size: 0.8rem;
+  outline: none;
+}
+
+button:disabled {
+  color: #f3f3f3;
+  background-color: #444;
+  cursor: not-allowed;
+}
+
+.purple {
   color: purple;
 }
 
@@ -36,12 +65,29 @@
   cursor: pointer;
 }
 
-.movie-item{
+.movie-item {
   display: grid;
   grid-template-columns: 1fr auto auto;
 }
 
-.movie-item svg{
+.movie-item svg {
   font-size: 1.2 rem;
   margin: 16px 5px;
+}
+
+h1 {
+  color: orange;
+}
+
+h1 .fa-film {
+  color: white;
+  transform: rotate(30deg);
+}
+
+.fa-sign-out-alt {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
